<resources>
    <string name="app_name">JACX</string>
    <string name="search">Search</string>
    <string name="album">Album</string>
    <string name="explore">Explore</string>
    <string name="music">Music</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No data.</string>
    <string name="joinLabel">Join trip by:</string>
    <string name="or">o</string>
    <string name="back">Back</string>
    <string name="pin">PIN</string>
    <string name="qrScan">Scan QR code</string>
    <string name="createTrip">Create new trip</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="friend_trip">Friends</string>
    <string name="music_trip">Music</string>
    <string name="album_trip">Album</string>
    <string name="tv_route_trip_friend">Select trip</string>
    <string name="btn_start_route_trip_friend">Trip start</string>
    <string name="btn_finish_route_trip_friend">Trip end</string>
    <string name="btn_save_route_trip_friend">Save trip</string>
    <string name="btn_add_route_trip_friend">Add trip</string>
    <string name="iV_ubicacion_actual">Current location</string>
    <string name="tV_ubicacion_actual">Stop 1</string>
    <string name="iB_delete_stop_present">Remove parada</string>
    <string name="tV_lista_canciones_trip_music">Song list</string>
    <string name="iB_mas_opciones_trip_music">More options</string>
    <string name="iB_download_song_trip_music">Download</string>
    <string name="iV_portada_album_trip_music">Front page</string>
    <string name="btn_add_song_trip_music">Add music</string>
    <string name="tV_trip_album">Album</string>
    <string name="tV_filtro_trip_album">Filters</string>
    <string name="btn_add_new_post_trip_album">Add post</string>
    <string name="tV_username_trip_album">User name</string>
    <string name="tV_horaPublicacion_trip_album">3 hours ago</string>
    <string name="iV_publicacion_trip_album">Post image</string>
    <string name="iV_logo_perfil_trip_album">Profile logo</string>
    <string name="tV_lista_amigos_trip_friend">Friends</string>
    <string name="iB_menu_burger_trip_friend">Menu</string>
    <string name="iV_perfil_trip_friend">Profile</string>
    <string name="tV_userName_trip_friend">UserName</string>
    <string name="tV_email_userName_trip_friend">userName@udc.es</string>
    <string name="btn_add_new_friend_trip_album">Add friends</string>
    <string name="my_album">My album</string>
    <string name="my_trips">My trips</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="date">Birthdate</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_logout">Logut</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="change_password"><u>Change password</u></string>
    <string name="reset_password"><u>Reset password</u></string>
    <string name="confirm_password">Confirm</string>
    <string name="connect">Connect via</string>
    <string name="connect_google">Continue via Google</string>
    <string name="connect_spotify">Continue via Spotify</string>
    <string name="logo">Logo</string>
    <string name="login_name">name.surname</string>
    <string name="text_name">Name Surname</string>
    <string name="text_date">Wednesday 8 of March 2023</string>
    <string name="text_mail">namesurname@gmail.com</string>
    <string name="join">Join</string>
    <string name="add">Add</string>
    <string name="dest_image_song">Representative image of a song.</string>
    <string name="dest_play_button">Play song button</string>
    <string name="dest_add">Add element</string>
    <string name="dest_photo">Album photo</string>
    <string name="spotify_button">Connect to Spotify</string>
    <string name="my_album_text">My album</string>
    <string name="own_trips_title">Planned trips</string>
    <string name="searchPin">Search by PIN</string>
    <string name="Logout_Spotify">Logout Spotify</string>
    <string name="Logout_Google">Logout Google</string>
    <string name="map_view">Map</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="launch_activity">Launch activity</string>
    <string name="no_location_text">No current location</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="ok">OK</string>
    <string name="birthdate_error"> It is mandatory to introduce a password </string>
    <string name="email_error">It is mandatory to introduce an email</string>
    <string name="password_error">It is mandatory to introduce a password</string>
    <string name="email_error_match">The email introduced is not valid. Ex:name@mail.com</string>
    <string name="name_error">It is mandatory to introduce an user name</string>
    <string name="navigation">Navegación</string>
    <string name="username_friend">Enter your username</string>
    <string name="new_friend">Which friend would you like to add?</string>
    <string name="save_friend">Save friend</string>
    <string name="navigation">Navigation</string>
    <string name="album_text">Trips Album</string>
    <string name="lastname">Lastname</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="title_activity_email_password" translatable="false">EmailPasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_password_email" translatable="false">PasswordEmailActivity</string>
    <string name="send">Send mail</string>
    <string name="trip_form_errors">Errores en el formulario</string>
    <string name="network_err">Error on server request</string>
    <string name="no_music">No music</string>
</resources>