<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/map_view"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/map_view" />
    <item
        android:id="@+id/friend_trip"
        android:enabled="true"
        android:icon="@drawable/baseline_group_24"
        android:title="@string/friend_trip" />
    <item
        android:id="@+id/music_trip"
        android:enabled="true"
        android:icon="@drawable/baseline_music_note_24"
        android:title="@string/music" />
    <item
        android:id="@+id/album_trip"
        android:enabled="true"
        android:icon="@drawable/baseline_photo_album_24"
        android:title="@string/album_trip" />
    <item
        android:id="@+id/QR_Trip"
        android:icon="@drawable/baseline_qr_code"
        android:title="QR" />
</menu>