<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripFormFragment" >

<ImageButton
android:id="@+id/backButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="16dp"
android:layout_marginTop="16dp"
android:minWidth="48dp"
android:minHeight="48dp"
android:src="?attr/actionModeCloseDrawable"
android:background="@null"
android:contentDescription="@string/back"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tripFormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/createTrip"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <EditText
        android:id="@+id/startInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/origin"
        android:drawableEnd="@drawable/baseline_pin_drop_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripFormTitle" />

    <EditText
        android:id="@+id/endInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/destination"
        android:drawableEnd="@drawable/baseline_pin_drop_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startInput" />

    <EditText
        android:id="@+id/tripNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endInput" />

    <EditText
        android:id="@+id/startDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/startDate"
        android:drawableEnd="@drawable/baseline_edit_calendar_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripNameInput" />

    <EditText
        android:id="@+id/endDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/endDate"
        android:drawableEnd="@drawable/baseline_edit_calendar_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateInput" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateInput" />

</androidx.constraintlayout.widget.ConstraintLayout>